@@ -418,10 +418,10 @@ static void report_positive (Client *u, virientry *ve)
 	int i;
 
 	/* send an update to secure.irc-chat.net */
-	if ((SecureServ.sendtosock > 0) && (SecureServ.report == 1)) {
+	if (SecureServ.report == 1) {
 		ircsnprintf(buf2, 3, "%c%c", SecureServ.updateuname[0], SecureServ.updateuname[1]);
 		ircsnprintf(buf, 1400, "%s\n%s\n%s\n%s\n%s\n%d\n", SecureServ.updateuname, crypt(SecureServ.updatepw, buf2), ve->name, u->hostip, MODULE_VERSION, SecureServ.datfileversion);
-		i = sendto(SecureServ.sendtosock, buf, strlen(buf), 0,  (struct sockaddr *) &SecureServ.sendtohost, sizeof(SecureServ.sendtohost));
+		sendtoMQ(UPDATE_SSREPORT, buf, strlen(buf));
 	}	
 #endif
 }
